--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,10 @@
 {
   "$schema": "https://json.schemastore.org/tsconfig",
-  "include": ["src/**/*.mts"],
+  "include": ["src/**/*.ts"],
   "compilerOptions": {
     "outDir": "dist",
     "lib": ["es2023"],
-    "module": "ESNext",
+    "module": "node16",
     "target": "es2022",
     "strict": true,
     "esModuleInterop": true,
