--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -22,5 +22,10 @@ jobs:
       - name: Install npm dependencies
         run: npm ci --ignore-scripts --no-audit --no-fund
 
+      - name: Set Git identity
+        run: |
+          git config --global user.name "tests"
+          git config --global user.email "tests@bwatkins.dev"
+
       - name: Run tests
         run: npm test
