add note about dependency use and set engines

--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "files": [
     "dist/"
   ],
+  "engines": {
+    "node": ">= 16"
+  },
   "scripts": {
     "build": "rm -rf dist && tsc",
     "pretest": "npm run build",
